Added DoSuperNew() implementation
git-svn-id: https://svn.aros.org/svn/aros/trunk@32999 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/tbLib/Makefile
+++ b/contrib/scout/source/tbLib/Makefile
@@ -73,6 +73,7 @@ OBJS = $(OBJDIR)/ports_AllocPort.o \
 	$(OBJDIR)/math64_cmp64_c.o \
 	$(OBJDIR)/envvar_GetEnvVar.o \
 	$(OBJDIR)/envvar_SetEnvVar.o \
+	$(OBJDIR)/mui_DoSuperNew.o \
 	$(OBJDIR)/mui_MakeButton.o \
 	$(OBJDIR)/mui_MakeCheckmark.o \
 	$(OBJDIR)/errorreq_ErrorMsg.o \
