Stripping doesn't kill AROS executables any more
git-svn-id: https://svn.aros.org/svn/aros/trunk@33000 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile
+++ b/contrib/scout/source/Makefile
@@ -236,7 +236,7 @@ $(LOCALE)/%.catalog: $(LOCALE)/%.ct
 
 $(TARGET): $(OBJECTS) tbLib/libtblib.a
 	$(LD) $(OBJECTS) -o $@.debug $(LIBS) $(LFLAGS)
-	$(STRIP) --remove-section=.comment $@.debug -o $@
+	$(STRIP) -R.comment -R.sdata2 -S $@.debug -o $@
 	chmod +x $@
 
 scout_cat.h: $(LOCALE)/scout.cd
