Picked up MorphOS fixes
git-svn-id: https://svn.aros.org/svn/aros/trunk@33004 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile.mos
+++ b/contrib/scout/source/Makefile.mos
@@ -193,7 +193,7 @@ $(TARGET): $(OBJECTS) tbLib/libtblib.a lib/libidentify.a
 	protect $@ rwed
 
 scout_cat.h: $(LOCALE)/scout.cd
-	flexcat locale/Scout.cd scout_cat.h=C_h.sd scout_cat.c=C_c.sd
+	flexcat locale/scout.cd scout_cat.h=C_h.sd scout_cat.c=C_c.sd
 
 $(OBJDIR)/scout_cat.o: scout_cat.h
 
