Added monitors window
git-svn-id: https://svn.aros.org/svn/aros/trunk@33005 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile
+++ b/contrib/scout/source/Makefile
@@ -112,6 +112,7 @@ OBJECTS=$(OBJDIR)/startup.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_main.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_memory.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_memory_detail.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_monitors.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_parentwindow.o \
