Fixed network server mode
git-svn-id: https://svn.aros.org/svn/aros/trunk@33040 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile.mos
+++ b/contrib/scout/source/Makefile.mos
@@ -207,7 +207,7 @@ $(OBJDIR)/$(CLASSESDIR)/scout_about.o: $(CLASSESDIR)/scout_about.c $(CLASSESDIR)
 $(OBJDIR)/$(CLASSESDIR)/scout_version.o: $(CLASSESDIR)/scout_version.c $(CLASSESDIR)/scout_version.h Scout_rev.h
 	$(CC) $(CFLAGS) $(OPTIMIZE) $(DEFINE) $< -o $@
 
-$(OBJDIR)/all_gcc.o: all_gcc.c $(EXTRASRC)/init_inet_daemon.c $(EXTRASRC)/set_socket_stdio.c $(EXTRASRC)/vasprintf.c
+$(OBJDIR)/all_gcc.o: all_gcc.c $(EXTRASRC)/init_inet_daemon.c $(EXTRASRC)/vasprintf.c
 
 tbLib/libtblib.a:
 	@cd tbLib; make -f Makefile.mos
