--- a/contrib/scout/source/Makefile.mos
+++ b/contrib/scout/source/Makefile.mos
@@ -66,6 +66,7 @@ OBJECTS=$(OBJDIR)/startup.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_memory.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_memory_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_monitors.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_monitors_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_parentwindow.o \
