Implemented jumping from screenmode to its MonitorSpec
git-svn-id: https://svn.aros.org/svn/aros/trunk@33043 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile
+++ b/contrib/scout/source/Makefile
@@ -143,6 +143,7 @@ OBJECTS=$(OBJDIR)/startup.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_disassembler.o \
    $(OBJDIR)/$(CLASSESDIR)/disassembler_button.o \
    $(OBJDIR)/$(CLASSESDIR)/flags_button.o \
+   $(OBJDIR)/$(CLASSESDIR)/monitor_button.o \
    $(OBJDIR)/$(CLASSESDIR)/task_button.o \
    $(OBJDIR)/hexdump.o \
    $(OBJDIR)/scout_cat.o \
