--- a/contrib/mui/classes/nlist/nlisttree_mcc/Makefile
+++ b/contrib/mui/classes/nlist/nlisttree_mcc/Makefile
@@ -177,8 +177,7 @@ LOBJS = library.o
 COBJS = NListtree.o \
         ClipboardServer.o \
         QuickSort.o \
-        Debug.o \
-        vastubs.o
+        Debug.o
 
 TOBJS = #NListtree-Test.o
 
@@ -227,6 +226,9 @@ ifeq ($(OS), os3)
   CFLAGS  += -noixemul -DNO_INLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug -lmui
+
+  # additional object files required
+  COBJS += vastubs.o
 
 else
 ifeq ($(OS), mos)
@@ -312,6 +314,27 @@ else
 all: depend
 	@make --no-print-directory all
 endif
+
+# for making a release we compile ALL target with no debug
+release:
+	@echo "  CC $<"
+	make OS=os4 clean
+	make OS=os4 DEBUG=
+	@echo "  CC $<"
+	make OS=os3 clean
+	make OS=os3 DEBUG=
+	@echo "  CC $<"
+	make OS=mos clean
+	make OS=mos DEBUG=
+	@echo "  CC $<"
+	make OS=aros-i386 clean
+	make OS=aros-i386 DEBUG=
+	@echo "  CC $<"
+	make OS=aros-ppc clean
+	make OS=aros-ppc DEBUG=
+	@echo "  CC $<"
+	make OS=aros-x86_64 clean
+	make OS=aros-x86_64 DEBUG=
 
 # make the object directories
 $(OBJDIR):
