--- a/contrib/mui/classes/nlist/nlisttree_mcp/Makefile
+++ b/contrib/mui/classes/nlist/nlisttree_mcp/Makefile
@@ -178,7 +178,7 @@ LOBJS = library.o
 COBJS = locale.o \
         NListtree.o \
         Debug.o \
-        vastubs.o
+        icon.o
 
 TOBJS = #NListtree-Test.o
 
@@ -189,7 +189,8 @@ CATALOGS = \
   $(LOCALE)/swedish.catalog \
   $(LOCALE)/english-british.catalog \
   $(LOCALE)/czech.catalog \
-  $(LOCALE)/french.catalog
+  $(LOCALE)/french.catalog \
+  $(LOCALE)/polish.catalog
 
 MCCOBJS  = $(addprefix $(OBJDIR)/,$(LOBJS)) $(addprefix $(OBJDIR)/,$(COBJS))
 TESTOBJS = $(addprefix $(OBJDIR)/,$(COBJS)) $(addprefix $(OBJDIR)/,$(TOBJS))
@@ -236,6 +237,9 @@ ifeq ($(OS), os3)
   CFLAGS  += -noixemul -DNO_INLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug -lmui
+
+  # additional object files required
+  COBJS += vastubs.o
 
 else
 ifeq ($(OS), mos)
@@ -321,6 +325,27 @@ else
 all: depend
 	@make --no-print-directory all
 endif
+
+# for making a release we compile ALL target with no debug
+release:
+	@echo "  CC $<"
+	make OS=os4 clean
+	make OS=os4 DEBUG=
+	@echo "  CC $<"
+	make OS=os3 clean
+	make OS=os3 DEBUG=
+	@echo "  CC $<"
+	make OS=mos clean
+	make OS=mos DEBUG=
+	@echo "  CC $<"
+	make OS=aros-i386 clean
+	make OS=aros-i386 DEBUG=
+	@echo "  CC $<"
+	make OS=aros-ppc clean
+	make OS=aros-ppc DEBUG=
+	@echo "  CC $<"
+	make OS=aros-x86_64 clean
+	make OS=aros-x86_64 DEBUG=
 
 # make the object directories
 $(OBJDIR):
