Implemented OOP class details window
git-svn-id: https://svn.aros.org/svn/aros/trunk@33624 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile.mos
+++ b/contrib/scout/source/Makefile.mos
@@ -111,6 +111,8 @@ OBJECTS=$(OBJDIR)/prestartup.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_monitors_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount_detail.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_oop.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_oop_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_parentwindow.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_patches.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_ports.o \
