Use printf instead of echo, because echo's -n option isn't understood by some shells (e.g. Mac OS's bash when run as sh).
git-svn-id: https://svn.aros.org/svn/aros/trunk@33725 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AHI/Device/Makefile.in
+++ b/contrib/necessary/AHI/Device/Makefile.in
@@ -58,7 +58,7 @@ ENABLE_WARPUP	= @ENABLE_WARPUP@
 # Files
 ########################################
 
-LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then echo -n "$$file "; fi; done))
+LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then printf "%s" "$$file "; fi; done))
 CATALOGS	= $(addsuffix .catalog, $(LANGUAGES))
 
 OBJECTS		= header.o gateway.o gatestubs.o \
