--- a/contrib/necessary/AHI/AHI/Makefile.in
+++ b/contrib/necessary/AHI/AHI/Makefile.in
@@ -51,7 +51,7 @@ OBJECTS_MUI	= gui_mui.o
 
 EXECUTABLES	= AHI_MUI # AHI_BGUI AHI_CA
 
-LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then echo -n "$$file "; fi; done))
+LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then printf "%s" "$$file "; fi; done))
 CATALOGS	= $(addsuffix .catalog, $(LANGUAGES))
 
 
