Synced up with current CVS
git-svn-id: https://svn.aros.org/svn/aros/trunk@33829 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/scout/source/Makefile
+++ b/contrib/scout/source/Makefile
@@ -114,6 +114,8 @@ OBJECTS=$(OBJDIR)/startup.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_memory_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_monitors.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_monitors_detail.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_monitorclass.o \
+   $(OBJDIR)/$(CLASSESDIR)/scout_monitorclass_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_mount_detail.o \
    $(OBJDIR)/$(CLASSESDIR)/scout_oop.o \
