-v should print build OS name, not target OS name
git-svn-id: https://svn.aros.org/svn/aros/trunk@34220 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/aminet/util/arc/unzip/amiga/GNUMakefile
+++ b/contrib/aminet/util/arc/unzip/amiga/GNUMakefile
@@ -66,6 +66,8 @@ OPT  = -O2
 # common compiler flags
 CFLAGSC  =  $(CDBG) $(OPT) $(CUSECPU) $(CIGNORE)
 
+OS=$(shell uname)
+
 ##################
 # TARGET OBJECTS #
 ##################
@@ -124,10 +126,10 @@ all: $(UNZIPS)
 	$(CC) -c $(CFLAGSC) $*.c -o $@ -DFUNZIP
 
 amiga$(O): amiga/amiga.c
-	$(CC) -c $(CFLAGSC) amiga/amiga.c -o $@ -I.
+	$(CC) -c $(CFLAGSC) -DUNDER='"$(OS)"' amiga/amiga.c -o $@ -I.
 
 amiga$(OX): amiga/amiga.c
-	$(CC) -c $(CFLAGSC) amiga/amiga.c -o $@ -DSFX -I.
+	$(CC) -c $(CFLAGSC) -DUNDER='"$(OS)"' amiga/amiga.c -o $@ -DSFX -I.
 
 filedate$(OF): amiga/filedate.c
 	$(CC) -c $(CFLAGSC) amiga/filedate.c -o $@ -DFUNZIP -I.
