--- a/contrib/mui/classes/thebar/mcc/button/Makefile
+++ b/contrib/mui/classes/thebar/mcc/button/Makefile
@@ -22,7 +22,7 @@
 
 ###########################################################################
 # This makefile is a very generic one. It tries to identify both, the host
-# and the target operating system for which YAM should be compiled.
+# and the target operating system for which this app should be compiled.
 # However, this auto-detection can be easily overridden by directly
 # specifying an option on the commandline while calling 'make'.
 #
@@ -178,8 +178,7 @@ MCCOBJS = library.o \
           scale.o \
           build.o \
           class.o \
-          debug.o \
-          vastubs.o
+          debug.o
 
 OBJS = $(addprefix $(OBJDIR)/,$(MCCOBJS))
 
@@ -225,6 +224,9 @@ ifeq ($(OS), os3)
   CFLAGS  += -noixemul -DNO_INLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug -lmui
+
+  # additional object files required
+  MCCOBJS += vastubs.o
 
 else
 ifeq ($(OS), mos)
@@ -322,6 +324,27 @@ else
 all: depend
 	@make --no-print-directory all
 endif
+
+# for making a release we compile ALL target with no debug
+release:
+	@echo "  CC $<"
+	make OS=os4 clean
+	make OS=os4 DEBUG=
+	@echo "  CC $<"
+	make OS=os3 clean
+	make OS=os3 DEBUG=
+	@echo "  CC $<"
+	make OS=mos clean
+	make OS=mos DEBUG=
+	@echo "  CC $<"
+	make OS=aros-i386 clean
+	make OS=aros-i386 DEBUG=
+	@echo "  CC $<"
+	make OS=aros-ppc clean
+	make OS=aros-ppc DEBUG=
+	@echo "  CC $<"
+	make OS=aros-x86_64 clean
+	make OS=aros-x86_64 DEBUG=
 
 # make the object directories
 $(OBJDIR):
