--- a/contrib/mui/classes/thebar/mcc/Makefile
+++ b/contrib/mui/classes/thebar/mcc/Makefile
@@ -182,8 +182,7 @@ COBJS = utils.o \
         scale.o \
         build.o \
         class.o \
-        debug.o \
-        vastubs.o
+        debug.o
 
 TOBJS = TheBar-Test.o
 
@@ -233,6 +232,9 @@ ifeq ($(OS), os3)
   CFLAGS  += -noixemul -DNO_INLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug -lmui
+
+  # additional object files required
+  COBJS += vastubs.o
 
 else
 ifeq ($(OS), mos)
@@ -320,9 +322,6 @@ endif
 # Here starts all stuff that is common for all target platforms and
 # hosts.
 
-# let's export all
-export
-
 # main target
 .PHONY: all
 ifeq ($(wildcard $(DEPFILE)),$(DEPFILE))
@@ -333,6 +332,27 @@ else
 all: depend
 	@make --no-print-directory all
 endif
+
+# for making a release we compile ALL target with no debug
+release:
+	@echo "  CC $<"
+	make OS=os4 clean
+	make OS=os4 DEBUG=
+	@echo "  CC $<"
+	make OS=os3 clean
+	make OS=os3 DEBUG=
+	@echo "  CC $<"
+	make OS=mos clean
+	make OS=mos DEBUG=
+	@echo "  CC $<"
+	make OS=aros-i386 clean
+	make OS=aros-i386 DEBUG=
+	@echo "  CC $<"
+	make OS=aros-ppc clean
+	make OS=aros-ppc DEBUG=
+	@echo "  CC $<"
+	make OS=aros-x86_64 clean
+	make OS=aros-x86_64 DEBUG=
 
 # make the object directories
 $(OBJDIR):
