--- a/contrib/mui/classes/nlist/nbitmap_mcc/Makefile
+++ b/contrib/mui/classes/nlist/nbitmap_mcc/Makefile
@@ -228,7 +228,10 @@ ifeq ($(OS), os3)
   LDLIBS  += -ldebug -lmui
 
   # additional object files required
-  COBJS += vastubs.o
+  COBJS += Chunky2Bitmap.o \
+           WritePixelArray.o \
+           WritePixelArrayAlpha.o \
+           vastubs.o
 
 else
 ifeq ($(OS), mos)
@@ -249,6 +252,9 @@ ifeq ($(OS), mos)
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug
 
+  # additional object files required
+  COBJS += Chunky2Bitmap.o
+
 else
 ifeq ($(OS), aros-i386)
 
@@ -262,8 +268,12 @@ ifeq ($(OS), aros-i386)
   endif
 
   # Compiler/Linker flags
+  OPTFLAGS = -O2 -fomit-frame-pointer -funroll-loops
   CFLAGS += -Wno-pointer-sign -DNO_INLINE_STDARG
   LDLIBS += -larossupport -lrom -lmui
+
+  # additional object files required
+  COBJS += Chunky2Bitmap.o
 
 else
 ifeq ($(OS), aros-ppc)
@@ -278,8 +288,12 @@ ifeq ($(OS), aros-ppc)
   endif
 
   # Compiler/Linker flags
+  OPTFLAGS = -O2 -fomit-frame-pointer -funroll-loops
   CFLAGS += -Wno-pointer-sign -DNO_INLINE_STDARG
   LDLIBS += -larossupport -lrom -lmui
+
+  # additional object files required
+  COBJS += Chunky2Bitmap.o
 
 else
 ifeq ($(OS), aros-x86_64)
@@ -294,8 +308,12 @@ ifeq ($(OS), aros-x86_64)
   endif
 
   # Compiler/Linker flags
+  OPTFLAGS = -O2 -fomit-frame-pointer -funroll-loops
   CFLAGS += -Wno-pointer-sign -DNO_INLINE_STDARG
   LDLIBS += -larossupport -lrom -lmui
+
+  # additional object files required
+  COBJS += Chunky2Bitmap.o
 
 endif
 endif
