necessary/AHI: Only use the m68k ASM files on a real Amiga
Signed-off-by: Jason S. McMullan <jason.mcmullan@netronome.com>

git-svn-id: https://svn.aros.org/svn/aros/trunk@34873 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AHI/Device/Makefile.in
+++ b/contrib/necessary/AHI/Device/Makefile.in
@@ -71,7 +71,7 @@ ifeq ($(ENABLE_WARPUP),yes)
 OBJECTS		+= elfloader.o warpup.o
 endif
 
-ifeq ($(host_cpu),m68k)
+ifeq ($(host_cpu)-$(host-os),m68k-amigaos)
 OBJECTS		+= addroutines_68k.o dspechofuncs_68k.o
 endif
 
