--- a/contrib/necessary/AHI/Drivers/Makefile.in
+++ b/contrib/necessary/AHI/Drivers/Makefile.in
@@ -37,6 +37,7 @@ SUBDIRS		= Device Filesave Void
 
 ifneq ($(strip $(HAVE_ASMIO)),)
 SUBDIRS		+= ac97
+SUBDIRS		+= HDAudio 
 SUBDIRS		+= EMU10kx
 endif
 
