--- a/contrib/necessary/AHI/configure.in
+++ b/contrib/necessary/AHI/configure.in
@@ -200,6 +200,7 @@ AC_OUTPUT(Makefile
           Docs/Makefile
           Drivers/Makefile
           Drivers/ac97/Makefile
+          Drivers/HDAudio/Makefile
           Drivers/AROS/Makefile
           Drivers/Common/Makefile.common
           Drivers/Device/Makefile
